; ModuleID = '/home/carl/AnghaBench/git/extr_blame.c_decref_split.c'
source_filename = "/home/carl/AnghaBench/git/extr_blame.c_decref_split.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blame_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.blame_entry*)* @decref_split to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decref_split(%struct.blame_entry* %0) #0 {
  %2 = alloca %struct.blame_entry*, align 8
  %3 = alloca i32, align 4
  store %struct.blame_entry* %0, %struct.blame_entry** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 3
  br i1 %6, label %7, label %18

7:                                                ; preds = %4
  %8 = load %struct.blame_entry*, %struct.blame_entry** %2, align 8
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.blame_entry, %struct.blame_entry* %8, i64 %10
  %12 = getelementptr inbounds %struct.blame_entry, %struct.blame_entry* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @blame_origin_decref(i32 %13)
  br label %15

15:                                               ; preds = %7
  %16 = load i32, i32* %3, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %3, align 4
  br label %4

18:                                               ; preds = %4
  ret void
}

declare dso_local i32 @blame_origin_decref(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
